# zigzag

./: CHANGELOG.md  README.md  zigzag.cabal
src/Data/Word/: Zigzag.hs
test/: Main.hs
