cabal-version: 3.0
name: zigzag
version: 0.0.1.0
-- synopsis: 
-- description:
category: Data
homepage: https://github.com/byteverse/zigzag
bug-reports: https://github.com/byteverse/zigzag/issues
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2022 Eric Demko
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.Word.Zigzag
  -- other-modules:
  build-depends:
    , base >=4.11.1
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base
    -- , quickcheck-classes
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , zigzag
  default-language: Haskell2010
  ghc-options: -Wall -O2
